@@ -1562,7 +1562,6 @@ handleHttpRequest(int connFd, int sslMode)
       conn_fd.ssl = NULL;
     }
 #endif
-
     numRequest = 0;
     FD_ZERO(&httpfds);
     FD_SET(conn_fd.socket, &httpfds);
@@ -1701,7 +1700,7 @@ prepSockAddr4(int port, void *ssin, socklen_t * sin_len)
 
   *sin_len = sizeof(*sin);
   memset(sin, 0, *sin_len);
-	
+    
   sin->sin_family = AF_INET;
   if (httpLocalOnly) {
     const char *loopback_int = "127.0.0.1";
@@ -1713,7 +1712,6 @@ prepSockAddr4(int port, void *ssin, socklen_t * sin_len)
   return (struct sockaddr *) sin;
 }
 
-
 static int
 bindToPort(int sock, int port, void *ssin, socklen_t * sin_len)
 {
@@ -1724,25 +1722,58 @@ bindToPort(int sock, int port, void *ssin, socklen_t * sin_len)
 
   if (getControlBool("httpLocalOnly", &httpLocalOnly))
     httpLocalOnly = 0;
+ 
+  char *l = "";
+  char *r = "";
+  char *ip;
+
+  ip = httpLocalOnly ? "127.0.0.1" : "0.0.0.0";
 
 #ifdef HAVE_IPV6
-  if (!fallback_ipv4)
-    sin = prepSockAddr6(port, ssin, sin_len);
+  if (!fallback_ipv4) {
+    l = "[";
+    r = "]";
+    ip = httpLocalOnly ? "::1" : "::";
+    if (!(sin = prepSockAddr6(port, ssin, sin_len)))
+      return 1;
+  }
   else
 #endif
-    sin = prepSockAddr4(port, ssin, sin_len);
+    if (!(sin = prepSockAddr4(port, ssin, sin_len)))
+      return 1;
 
-  if (bind(sock, sin, *sin_len) || listen(sock, 10)) {
-    mlogf(M_ERROR, M_SHOW, "--- Cannot listen on port %ld (%s)\n", port,
+  int maxtries = 5;
+  int i = maxtries;
+  while (1) {
+    if (!bind(sock, sin, *sin_len)) {
+      if (!listen(sock, 10)) {
+        break;
+      } else {
+        mlogf(M_ERROR, M_SHOW, "--- Cannot listen on socket %s%s%s:%d (%s)\n",
+            l, ip, r, port, strerror(errno));
+        return 1;
+      }
+    } else if (errno==EADDRINUSE) {
+      if (--i <= 0) {
+        mlogf(M_ERROR, M_SHOW,
+            "--- Cannot bind to socket %s%s%s:%d after %d attempts. (%s)\n",
+            l, ip, r, port, maxtries, strerror(errno));
+        return 1;
+      }
+      mlogf(M_ERROR, M_SHOW,
+          "--- Socket %s%s%s:%d not ready (%s), retrying...\n", l, ip, r, port,
           strerror(errno));
-    sleep(1);
-    return 1;
+      sleep(1);
+    } else {
+      mlogf(M_ERROR, M_SHOW, "--- Cannot bind to socket %s%s%s:%d (%s)\n", 
+          l, ip, r, port, strerror(errno));
+      return 1;
+    }
   }
-
+  mlogf(M_ERROR, M_SHOW, "--- Listening on socket %s%s%s:%d\n", l, ip, r, port);
   return 0;
 }
-
-
+ 
 #ifdef HAVE_UDS
 static int
 bindUDS(int fd, char *path, struct sockaddr_un *sun, socklen_t sun_len)
@@ -2087,7 +2118,7 @@ httpDaemon(int argc, char *argv[], int sslMode)
   }
 #endif
 
-  int             bindrc = 0;
+  int bindrc = 0;
   if (enableHttp) {
     bindrc = bindToPort(httpListenFd, httpPort, &httpSin, &httpSin_len);
   }
@@ -2105,8 +2136,7 @@ httpDaemon(int argc, char *argv[], int sslMode)
 #endif
 
   if (bindrc > 0)
-    return 1;                   /* if can't bind to port, return 1 to
-                                 * shutdown sfcb */
+    return 1;                   /* if can't bind to port, return 1 */
 
   if (!debug) {
     int             rc = fork();
@@ -2125,6 +2155,7 @@ httpDaemon(int argc, char *argv[], int sslMode)
   setSignal(SIGINT, SIG_IGN, 0);
   setSignal(SIGTERM, SIG_IGN, 0);
   setSignal(SIGHUP, SIG_IGN, 0);
+  setSignal(SIGUSR2, SIG_IGN, 0);
   setSignal(SIGPIPE, handleSigPipe,0);
 
 #if defined USE_SSL
